@@ -3,3 +3,4 @@
 #
 
 obj-y := tty_io.o
+obj-y += n_tty.o
